--- a/style/hero.css
+++ b/style/hero.css
@@ -179,3 +179,62 @@ nav a{
     padding: 20px;
     border-radius: 20px;
 }
+/* deals & discounts section */
+
+.deals{
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    margin-top: 50px;
+}
+.img-over-box-container{
+    display: grid;
+    align-items: center;
+  justify-content: center;
+}
+.img-container{
+    position: relative;
+  color: black;
+}
+.img-container img{
+    display: flex;
+    text-align: center;
+    /* width: 1200px; */
+}
+.img-over-box-1-3{
+    position: absolute;
+    top: 50px;
+    margin-left: 500px;
+    padding: 80px;
+    background: rgba(251, 248, 248, 0.5);
+    border-radius: 10px;
+    font-family: sans-serif;
+    border: 2 solid tomato;
+    /* transform: translate(-50%, -50%); */
+}
+.price{
+    color: rgb(254, 70, 38);
+}
+/* coper 2 section */
+.img-over-box-2{
+    position: absolute;
+    top: 50px;
+    margin-left: 50px;
+    padding: 80px;
+    background: rgba(251, 248, 248, 0.5);
+    border-radius: 10px;
+    font-family: sans-serif;
+    /* transform: translate(-50%, -50%); */
+}
+.see-all-packages{
+    text-align: center;
+}
+.btn-primary{
+    padding: 15px 35px;
+    background-color:rgb(254, 70, 38);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-size: 25px;
+}
