--- a/style/hero.css
+++ b/style/hero.css
@@ -238,3 +238,103 @@ nav a{
     font-family: sans-serif;
     font-size: 25px;
 }
+/* my mountain section */
+
+.mountain-container{
+    margin-top: 50px;
+    font-family: sans-serif;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.line{
+    line-height: 1.7;
+}
+.mountain{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.mountain h2{
+    position: absolute;
+    margin-top: 18%;
+    left: 70%;
+    transform: translate(-50%, -50%)
+}
+.mountain-text button{
+    padding: 15px 35px;
+    background-color:rgb(254, 70, 38);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-family: sans-serif;
+    font-size: 25px;
+}
+/* login section */
+
+.advancd{
+    margin-right: 10%;
+  margin-left: 10%;
+    font-family: sans-serif;
+    margin-top: 190px;
+}
+.advancd button{
+    padding: 15px 35px;
+    background-color:rgb(254, 70, 38);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 25px;
+}
+.advancd h1{
+    font-size: 35px;
+}
+.rotate-img-1{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.rotate-img-2 p{
+    position: absolute;
+    /* border: 2px solid tomato; */
+    background-color: rgb(254, 70, 38);
+    padding: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    margin-top: 14%;
+    left: 80%; 
+    rotate: -35deg;
+    transform: translate(-50%, -50%)
+}
+.rotate-img-2 span{
+    font-size: 25px;
+}
+
+.login-form-container{
+  width: 400px;
+  height: 330px;
+  border: 3px solid tomato;
+  border-radius: 10px;
+  padding: 50px;
+}
+
+.login-form-container h1{
+    font-size: 40px;
+}
+.login-form-container input{
+    background: rgb(211, 205, 205);
+  background: rgba(211, 204, 204, 0.5);
+    border: 0;
+    width: 100%;
+    height: 40px;
+  border-radius: 5px;
+}
+
+.login-form-container button{
+    border: 0;
+    width: 100%;
+    height: 40px;
+    color: white;
+    background-color: rgb(254, 70, 38);
+    border-radius: 5px;
+    font-size: 20px;
+}
